--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,10 +1,11 @@
 pipeline {
     agent any
     
+    }
     stages {
         stage('Checkout') {
             steps {
-                git branch: 'main', url: 'https://github.com/Jyurashi/Banking.git'
+                git branch: 'main', url: 'https://github.com/devopscbabu/May-Banking.git'
             }
         }
         stage('Build Package') {
@@ -17,5 +18,3 @@ pipeline {
                 publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: '/var/lib/jenkins/workspace/Banking-Project/target/surefire-reports', reportFiles: 'index.html', reportName: 'HTML Report', reportTitles: '', useWrapperFileDirectly: true])
             }
         }
-      }
-    }
