--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,7 +31,7 @@ pipeline {
                 withCredentials([usernamePassword(credentialsId: 'docker-hub', passwordVariable: 'docker_password', usernameVariable: 'docker_login')]) {
                 sh 'docker login -u ${docker_login} -p ${docker_password}'
                         }
-                sh 'docker push cbabu85/banking-project:1.0 '
+                sh 'docker push jyurashi/banking-project:1.0 '
             }
         }
       }
