--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,5 +34,15 @@ pipeline {
                 sh 'docker push jyurashi/banking-project:1.0 '
             }
         }
+        stage('Configure Server with terraform and deploy using Ansible') {
+           steps {
+              dir('my-serverfiles') {
+              sh 'sudo chmod 600 Babuckey.pem'
+              sh 'terraform init'
+              sh 'terraform validate'
+              sh 'terraform apply --auto-approve'
+                   }   
+                }
+            }
       }
     }
