--- a/jenkinsfile
+++ b/jenkinsfile
@@ -37,7 +37,7 @@ pipeline {
         stage('Configure Server with terraform and deploy using Ansible') {
            steps {
               dir('my-serverfiles') {
-              sh 'sudo chmod 600 Babuckey.pem'
+              sh 'sudo chmod 600 Jenkins.pem'
               sh 'terraform init'
               sh 'terraform validate'
               sh 'terraform apply --auto-approve'
