--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,10 +1,9 @@
 pipeline {
     agent any
-     environment {
+	 environment {
         AWS_ACCESS_KEY_ID        = credentials('AWS_ACCESS_KEY_ID')
         AWS_SECRET_ACCESS_KEY    = credentials('AWS_SECRET_ACCESS_KEY')
     }
-
     stages {
         stage('Checkout') {
             steps {
@@ -23,14 +22,14 @@ pipeline {
         }
         stage('Build Docker Image') {
             steps {
-                sh 'docker build -t cbabu85/banking-project:1.0 .'
-            }
+                sh 'docker build -t jyurashi/banking-project:1.0 .'
+            }       
         }
-         stage('Docker Push Image') {
+        stage('Docker Push Image') {
             steps {
-                withCredentials([usernamePassword(credentialsId: 'docker-hub', passwordVariable: 'docker_password', usernameVariable: 'docker_login')]) {
+                withCredentials([usernamePassword(credentialsId: 'docker-hubs', passwordVariable: 'docker_password', usernameVariable: 'docker_login')]) {
                 sh 'docker login -u ${docker_login} -p ${docker_password}'
-                        }
+                }
                 sh 'docker push jyurashi/banking-project:1.0 '
             }
         }
@@ -44,5 +43,5 @@ pipeline {
                    }   
                 }
             }
-      }
     }
+}
